--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ pandas = "*"
 matplotlib = "*"
 bqplot = "*"
 ipympl = "*"
+jupyterlab = "*"
+jupyter-matplotlib = "*"
 
 [requires]
 python_version = "3.7"
