--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "COVID-19"]
 	path = COVID-19
 	url = https://github.com/CSSEGISandData/COVID-19.git
+[submodule "country-data"]
+	path = country-data
+	url = git@github.com:samayo/country-json.git
